# JimsFridge

./: CMakeLists.txt  README.md
include/: allSayings.h  options.h  properties.h  saying.h  section.h
scripts/: jimsFridge.service  postALine.py
source/: allSayings.cpp  jimsFridge.cpp  options.cpp  properties.cpp  saying.cpp  section.cpp
